--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a> 
       at the <a href="https://www.uottawa.ca/en">University of Ottawa</a>.
     </p>
-    <p class="m-0">Research interest: deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery.</p>
+    
     <p class="m-0">
       <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, 
       <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a> 
@@ -93,6 +93,7 @@
 </div>
   
 <div class="col-lg-8">
+  <p class="m-0"> I am interested in deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery.</p>
   <p class="m-0" style="line-height: 1.2;">
     I hold a BEng from Shanghai Jiao Tong University and a PhD from the University of Ottawa, both in computer science.
     Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
