--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
               border: 2px solid #000; border-radius: 10px;">
   
   <div>
-    <h3>Hongyu (Harry) Guo</h3>
+    <h3>Hongyu (Harry) Guo, Ph.D</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
-    <p>Senior Researcher Officer,  <a href="https://nrc.canada.ca/en"> National Research Council Canada (NRC)</a>
+    <p><b>Senior Researcher Officer</b>,  <a href="https://nrc.canada.ca/en"> National Research Council Canada (NRC)</a>
     </p>
-    <p>Adjunct Professor,  <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a>,  
+    <p><b>Adjunct Professor</b>,  <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a>,  
        <a href="https://www.uottawa.ca/en">University of Ottawa</a>
     </p>
     
@@ -121,11 +121,11 @@
       <ul>
   
              <li> [Recent program committee members] ICLR19-22, NeurIPS16-21, ICML18-21, ACL21,19,17, EMNLP20,15-18, NAACL18,16,15 </li>
-                    <li> [Research awards] Best Paper Award at Canadian AI 2021, 
-Best Paper Award at *SEM2015,  
-Best Paper Award at MLDM2012,  
-Research Breakthrough of the Year at NRC-IIT2011,  
-Distinguished Papers Award at ECML-PKDD2006 </li>
+                    <li> [Research awards] <b> Best Paper</b> Award at Canadian AI 2021, 
+<b>Best Paper</b> Award at *SEM2015,  
+<b>Best Paper</b> Award at MLDM2012,  
+<b>Research Breakthrough</b> of the Year at NRC-IIT2011,  
+<b>Distinguished Papers</b> Award at ECML-PKDD2006 </li>
 
       </div>
 
