--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               border: 2px solid #000; border-radius: 10px;">
   
   <div>
-    <h3>Hongyu (Harry) Guo, PhD</h3>
+    <h3>Hongyu (Harry) Guo, Ph.D.</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
     <p><b>Senior Researcher Officer</b>,  <a href="https://nrc.canada.ca/en"> National Research Council Canada (NRC)</a>
     </p>
