--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   
 <div class="col-lg-8">
   <p class="m-0"> I am interested in deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery.</p>
-  <p class="m-0" style="line-height: 1.2;">
+  <p class="m-0">
     I hold a BEng from Shanghai Jiao Tong University and a PhD from the University of Ottawa, both in computer science.
   </p>
 
@@ -339,7 +339,7 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li style="margin-bottom: 20px;">
     <b>[Long Short-Term Memory Over Recursive Structures].</b>
     <p class='content'>Zhu, X., Sobhani, P., & Guo, H.</p>
-    <a href="https://doi.org/10.18653/v1/n16-1106">ICML 2015</a>
+    <a href="http://proceedings.mlr.press/v37/zhub15.html">ICML 2015</a>
 </li>
 
 <li style="margin-bottom: 20px;">
