--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
   
 <div class="col-lg-8">
-  <p class="m-0"> I am interested in deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery.</p>
+  <p class="m-0">I am passionate about advancing machine learning and deep learning for transformative applications across scientific discovery, natural language processing, and computer vision.</p>
   <p class="m-0">
     I hold a BEng from Shanghai Jiao Tong University and a PhD from the University of Ottawa, both in computer science.
   </p>
