--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   <div>
     <h3>Hongyu (Harry) Guo, Ph.D.</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
-    <p>Senior Researcher Officer,  <a href="https://nrc.canada.ca/en"> National Research Council Canada (NRC)</a>
+    <p>Senior Researcher Officer,  National Research Council Canada <a href="https://nrc.canada.ca/en">(NRC)</a>
     </p>
-    <p>Adjunct Professor,  <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a>,  
+    <p>Adjunct Professor,  School of Electrical Engineering and Computer Science,  
        <a href="https://www.uottawa.ca/en">University of Ottawa</a>
     </p>
     
