--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               border: 2px solid #000; border-radius: 10px;">
   
   <div>
-    <h3>Hongyu (Harry) Guo, Ph.D.</h3>
+    <h3>Harry Hongyu Guo, Ph.D.</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
     <p>Senior Researcher Officer,  National Research Council Canada (<a href="https://nrc.canada.ca/en">NRC</a>)
     </p>
