--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>Hongyu Guo, National Research Council Canada, University of Ottawa, Canada</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <!-- Custom styles for this template -->
     <link href="css/small-business.css" rel="stylesheet">
