--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
       </div>
       <!-- /.row -->
 
-    <div class=" my-4 text-left">
+<!--    <div class=" my-4 text-left"> -->
+    <div class="col-lg-8">  
       <h4>Recent News</h4>
       <ul>
              <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient">  <span style="color: black;">A molecule search project with Prof. Yoshua Bengio at Mila</span> </a>   </li>
