--- a/index.html
+++ b/index.html
@@ -103,18 +103,15 @@
 
 </div>
         <br>  
-    <!--        <br>  -->
 
 
 
-<!-- Due to the large amount of emails I receive, I may not be able to respond to each one individually. -->
-        </div>
-        <!-- /.col-md-4 -->
+
+<!--        </div>
       </div>
-      <!-- /.row -->
+-->
 
-<!--    <div class=" my-4 text-left"> -->
-    <div class="col-lg-8">  
+  <div class=" my-4 text-left"> 
       <h4>Recent News</h4>
       <ul>
              <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient">  <span style="color: black;">A molecule search project with Prof. Yoshua Bengio at Mila</span> </a>   </li>
