--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div style="display: flex; align-items: center;">
   <img src="HarryGuo.jpg" alt="Harry Guo" 
        style="width: 230px; height: 230px; object-fit: cover; margin-right: 20px; 
-              border: 2px solid #000; border-radius: 10px;">
+              border: 2px solid lightgray; border-radius: 10px;">
   
   <div>
     <h3>Harry Hongyu Guo, Ph.D.</h3>
