--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=gbk"> 
     <meta name="google-site-verification" content="qEih9m0y-6X0QuisQYfHSxOvkW-o5Q3dfxuQ5Z4JtGA" />
 
+a {
+    text-decoration: none;  /* Removes the underline */
+    color: blue;            /* Change this to your desired color */
+}
+    
   </head>
 
 
