--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div>
     <h3>Harry Hongyu Guo, Ph.D.</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
-    <p>Senior Researcher Officer,  National Research Council Canada (<a href="https://nrc.canada.ca/en">NRC</a>)
+    <p>Senior Researcher Officer,  <a href="https://nrc.canada.ca/en">National Research Council Canada (NRC)</a>
     </p>
     <p>Adjunct Professor,  School of Electrical Engineering and Computer Science,  
        <a href="https://www.uottawa.ca/en">University of Ottawa</a>
@@ -122,8 +122,8 @@
   <div class=" my-4 text-left"> 
       <h4>Recent News</h4>
       <ul>
-             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient">  <span style="color: black;">A molecule search project with Prof. Yoshua Bengio at Mila</span> </a>   </li>
-         <li> <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project">  <span style="color: black;">A molecule graph generation project with Prof. Jian Tang at Mila</span></a>   </li>
+             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient">  A molecule search project with Prof. Yoshua Bengio at Mila </a>   </li>
+         <li> <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project">  A molecule graph generation project with Prof. Jian Tang at Mila</a>   </li>
       </div>
 
       
