--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
                 <li style="margin-bottom: 20px;"><b>[Conversational Drug Editing Using Retrieval and Domain Feedback].  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
 </p> <a href="https://arxiv.org/pdf/2305.18090.pdf">
   ICLR 2024  </a> </li>
+<li style="margin-bottom: 20px;">
+    <b>[Calibration Attacks: A Comprehensive Study of Adversarial Attacks on Model Confidence].</b>
+    <p class='content'>Obadinma, S., Zhu, X., & Guo, H.</p>
+    <a href="https://arxiv.org/pdf/2401.02718">TMLR 2024</a>
+</li>      
          <li style="margin-bottom: 20px;"><b>[Symmetry-Informed Geometric Representation for Molecules, Proteins, and Crystalline Materials].  </b> <p class='content'>  Liu, S., Du, W., Li, Y., Li, Z., Zheng, Z., Duan, C., Ma, Z., Yaghi, O., Anandkumar, A., Borgs, C., Chayes, J., Guo, H., & Tang, J.</p> <a href="https://arxiv.org/pdf/2306.09375.pdf"> NeurIPS 2023</a> </li>     
 
        <li style="margin-bottom: 20px;"><b> [Disentangled Wasserstein Autoencoder for T-Cell Receptor Engineering].  </b> <p class='content'>  Li, T., Guo, H., Grazioli, F., Gerstein, M., & Min, M. 
