--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
     <!-- Custom styles for this template -->
     <link href="css/small-business.css" rel="stylesheet">
     <style type="text/css">
+
+    header {
+      background-color: #004080;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }
+    footer {
+      background-color: #004080;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+      
       .content{margin-top: 0; margin-bottom: 0}
       a {
           text-decoration: none;  /* Removes the underline */
