--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
   <div class=" my-4 text-left"> 
       <h4>Recent News</h4>
       <ul>
-             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient">  A molecule search project with Prof. Yoshua Bengio at Mila </a>   </li>
-         <li> <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project">  A molecule graph generation project with Prof. Jian Tang at Mila</a>   </li>
+             <li>  A <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> molecule search  </a> project with Prof. <a href="https://yoshuabengio.org/profile/"> Yoshua Bengio </a> at Mila </a>   </li>
+         <li>   A <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project"> molecule graph </a> generation project with Prof. <a href="https://jian-tang.com/"> Jian Tang at Mila</a>   </li>
       </div>
 
       
