--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <h4>Recent News</h4>
       <ul>
              <li>  A <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> molecule search  </a> project with Prof. <a href="https://yoshuabengio.org/profile/"> Yoshua Bengio </a> at Mila </a>   </li>
-         <li>   A <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project"> molecule graph </a> generation project with Prof. <a href="https://jian-tang.com/"> Jian Tang </a> at Mila   </li>
+         <li>   A <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project"> molecule graph </a> representation and generation project with Prof. <a href="https://jian-tang.com/"> Jian Tang </a> at Mila   </li>
       </div>
 
       
