--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       
 <div class="col-lg-8">
   <p class="m-0">I am passionate about advancing machine learning and deep learning for transformative applications across scientific discovery, natural language processing, and computer vision.</p>
-  <p class="m-0">
+  <p class="m-0  mt-3">
     I hold a BEng from Shanghai Jiao Tong University and a PhD from the University of Ottawa, both in computer science.
   </p>
 
