--- a/index.html
+++ b/index.html
@@ -154,8 +154,6 @@
 <li style="margin-bottom: 20px;"><b> <span style="color: darkgray;">[Protein Conformation Sampling]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Jiarui Lu, Xiaoyin Chen, Stephen Zhewen Lu, Chence Shi, Hongyu Guo, Yoshua Bengio, Jian Tang. </p><a href="https://arxiv.org/pdf/2410.18403">arXiv 2024</a></li>         
 <!--  <li style="margin-bottom: 20px;"><b> <span style="color: darkgray;">[Material Crystallization]</span> An Equivariant Flow Matching Framework for Learning Molecular Crystallization. </b><p class='content'> Shengchao Liu, Divin Yan, Hongyu Guo, Anima Anandkumar. </p><a href="https://openreview.net/pdf?id=lCVqpQvr4l">arXiv</a></li>  -->       
 <!--  <li style="margin-bottom: 20px;"><b> <span style="color: darkgray;">[LLM for Biology Pathway]</span> Conversational Large Language Models for Biology Pathway Detection. </b><p class='content'> Yanjing Li, Hannan Xu, Haiteng Zhao, Hongyu Guo, Shengchao Liu. </p><a href="https://openreview.net/pdf?id=AS5AZ5L8zk">arXiv</a></li>  -->
-<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;">[Text Guided Protein Editting] </span>A Text-guided Protein Design Framework. </b><p class='content'> Shengchao Liu, Yanjing Li, Zhuoxinran Li, Anthony Gitter, Yutao Zhu, Jiarui Lu,
-Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2302.04611">arXiv 2023</a></li>
 <li style="margin-bottom: 20px;"><b> <span style="color: darkgray;">[Protein-Ligand Dynamics]</span> A Multi-Grained Symmetric Differential Equation Model for Learning Protein-Ligand Binding Dynamics. </b><p class='content'> Shengchao Liu, Weitao Du, Yanjing Li, Zhuoxinran Li, Vignesh Bhethanabotla, Nakul Rampal, Omar Yaghi, Christian Borgs, Anima Anandkumar, Hongyu Guo, Jennifer Chayes. </p><a href="https://arxiv.org/pdf/2401.15122">arXiv 2023</a></li>
 
        </ul>
@@ -165,7 +163,9 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
              
       <!-- <h5> 2023</h5> -->
          <ul>
-
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> </span>A Text-guided Protein Design Framework. </b><p class='content'> Shengchao Liu, Yanjing Li, Zhuoxinran Li, Anthony Gitter, Yutao Zhu, Jiarui Lu,
+Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2302.04611"> Nature Machine Intelligence 2024</a></li>
+           
 <li style="margin-bottom: 20px;"><b>Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
   </p> <a href="https://arxiv.org/pdf/2305.18090.pdf">  ICLR 2024  </a> 
 </li>
