--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
              
       <!-- <h5> 2023</h5> -->
          <ul>
-<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> </span>A Text-guided Protein Design Framework. </b><p class='content'> Shengchao Liu, Yanjing Li, Zhuoxinran Li, Anthony Gitter, Yutao Zhu, Jiarui Lu,
-Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2302.04611"> Nature Machine Intelligence 2024</a></li>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J.,
+Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., and Anandkumar, A. </p><a href="https://arxiv.org/pdf/2302.04611"> Nature Machine Intelligence 2024</a></li>
            
 <li style="margin-bottom: 20px;"><b>Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
   </p> <a href="https://arxiv.org/pdf/2305.18090.pdf">  ICLR 2024  </a> 
