--- a/index.html
+++ b/index.html
@@ -135,12 +135,14 @@
       <ul>
   
 <li> [Recent program committee members] ICLR19-22, NeurIPS16-21, ICML18-21, ACL21,19,17, EMNLP20,15-18, NAACL18,16,15 </li>
-<li> [Research awards] <b> Best Paper</b> Award at Canadian AI 2021, 
-<b>Best Paper</b> Award at *SEM2015,  
-<b>Best Paper</b> Award at MLDM2012,  
-<b>Research Breakthrough</b> of the Year at NRC-IIT2011,  
-<b>Distinguished Papers</b> Award at ECML-PKDD2006 </li>
 
+<li> [Research awards] 
+  <b>Best Paper</b> Award at Canadian AI 2021, <br>
+  <b>Best Paper</b> Award at *SEM2015, <br>
+  <b>Best Paper</b> Award at MLDM2012, <br>
+  <b>Research Breakthrough</b> of the Year at NRC-IIT2011, <br>
+  <b>Distinguished Papers</b> Award at ECML-PKDD2006 
+</li>
       </div>
 
 
