--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   
 <li> [Recent program committee members] ICLR19-22, NeurIPS16-21, ICML18-21, ACL21,19,17, EMNLP20,15-18, NAACL18,16,15 </li>
 
-<li> [Research awards] 
+<li> [Research awards] <br>
   <b>Best Paper</b> Award at Canadian AI 2021, <br>
   <b>Best Paper</b> Award at *SEM2015, <br>
   <b>Best Paper</b> Award at MLDM2012, <br>
