--- a/index.html
+++ b/index.html
@@ -137,10 +137,11 @@
 <li> [Recent program committee members] ICLR19-22, NeurIPS16-21, ICML18-21, ACL21,19,17, EMNLP20,15-18, NAACL18,16,15 </li>
 
 <li> [Research awards] <br>
-  <b>Best Paper</b> Award at Canadian AI 2021, <br>
-  <b>Best Paper</b> Award at *SEM2015, <br>
-  <b>Best Paper</b> Award at MLDM2012, <br>
-  <b>Research Breakthrough</b> of the Year at NRC-IIT2011, <br>
+  <b>Excellence in Research </b> Award at NRC-DT 2024 <br>
+  <b>Best Paper</b> Award at Canadian AI 2021 <br>
+  <b>Best Paper</b> Award at *SEM2015 <br>
+  <b>Best Paper</b> Award at MLDM2012 <br>
+  <b>Research Breakthrough</b> of the Year at NRC-IIT2011 <br>
   <b>Distinguished Papers</b> Award at ECML-PKDD2006 
 </li>
       </div>
