--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <b>Best Paper</b> Award at Canadian AI 2021 <br>
   <b>Best Paper</b> Award at *SEM2015 <br>
   <b>Best Paper</b> Award at MLDM2012 <br>
-  <b>Research Breakthrough</b> of the Year at NRC-IIT2011 <br>
+  <b>Research Breakthrough of the Year </b> Award at NRC-IIT2011 <br>
   <b>Distinguished Papers</b> Award at ECML-PKDD2006 
 </li>
       </div>
