--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [AI for Drug] </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J.,
 Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. </p><a href="https://arxiv.org/pdf/2302.04611"> Nature Machine Intelligence 2025</a></li>
            
-<li style="margin-bottom: 20px;"><b>Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [AI for Drug] </span>Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
   </p> <a href="https://arxiv.org/pdf/2305.18090.pdf">  ICLR 2024  </a> 
 </li>
            
