--- a/index.html
+++ b/index.html
@@ -230,194 +230,162 @@ Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. <
     <a href="https://ieeexplore.ieee.org/abstract/document/10249215">TPAMI 2023</a>
 </li>
            
-<li style="margin-bottom: 20px;">
-    <b>Pre-training Molecular Graph Representation with 3D Geometry.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [AI for Drug] </span>  Pre-training Molecular Graph Representation with 3D Geometry.</b>
     <p class='content'>Liu, S., Wang, H., Liu, W., Lasenby, J., Guo, H., & Tang, J.</p>
     <a href="https://arxiv.org/pdf/2110.07728.pdf">ICLR 2022</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Non-Autoregressive Electron Redistribution Modeling for Reaction Prediction.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [AI for Drug] </span>  Non-Autoregressive Electron Redistribution Modeling for Reaction Prediction.</b>
     <p class='content'>Bi, H., Wang, H., Shi, C., Coley, C., Tang, J., & Guo, H.</p>
     <a href="https://arxiv.org/pdf/2106.07801.pdf">ICML 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Self-supervised Graph-level Representation Learning with Local and Global Structure.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [AI for Drug] </span>  Self-supervised Graph-level Representation Learning with Local and Global Structure.</b>
     <p class='content'>Xu, M., Wang, H., Ni, B., Guo, H., & Tang, J.</p>
     <a href="https://arxiv.org/pdf/2106.04113.pdf">ICML 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Symmetric Wasserstein Autoencoders.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Symmetric Wasserstein Autoencoders.</b>
     <p class='content'>Sun, S., & Guo, H.</p>
     <a href="https://arxiv.org/pdf/2106.13024.pdf">UAI 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Class-wise Calibration: A Case Study on COVID-19 Hate Speech.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Class-wise Calibration: A Case Study on COVID-19 Hate Speech.</b>
     <p class='content'>Obadinma, S. G. H. Z. X.</p>
     <a href="https://www.caiac.ca/en/conferences/canadianai-2021/home">CAI 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Midpoint Regularization: from High Uncertainty Training Labels to Conservative Classification Decisions.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Midpoint Regularization: from High Uncertainty Training Labels to Conservative Classification Decisions.</b>
     <p class='content'>Guo, H.</p>
     <a href="https://arxiv.org/pdf/2106.13913.pdf">ECML-PKDD 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Nonlinear Mixup: Out-Of-Manifold Data Augmentation for Text Classification.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Nonlinear Mixup: Out-Of-Manifold Data Augmentation for Text Classification.</b>
     <p class='content'>Guo, H.</p>
     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/5822">AAAI 2020</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Aggregated Learning: A Vector-Quantization Approach to Learning Neural Network Classifiers.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Aggregated Learning: A Vector-Quantization Approach to Learning Neural Network Classifiers.</b>
     <p class='content'>Soflaei, M., Guo, H., Al-Bashabsheh, A., Mao, Y., & Zhang, R.</p>
     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/6038">AAAI 2020</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>A Graph to Graphs Framework for Retrosynthesis Prediction.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [AI for Drug] </span>  A Graph to Graphs Framework for Retrosynthesis Prediction.</b>
     <p class='content'>Shi, C., Xu, M., Guo, H., Zhang, M., & Tang, J.</p>
     <a href="http://proceedings.mlr.press/v119/shi20d.html">ICML 2020</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Dynamic Graph Convolutional Networks for Entity Linking.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> Dynamic Graph Convolutional Networks for Entity Linking.</b>
     <p class='content'>Wu, J., Zhang, R., Mao, Y., Guo, H., Soflaei, M., & Huai, J.</p>
     <a href="https://doi.org/10.1145/3366423.3380192">WWW 2020</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>MixUp as Locally Linear Out-of-Manifold Regularization.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> MixUp as Locally Linear Out-of-Manifold Regularization.</b>
     <p class='content'>Guo, H., Mao, Y., & Zhang, R.</p>
     <a href="https://doi.org/10.1609/aaai.v33i01.33013714">AAAI 2019</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Uncover the Ground-Truth Relations in Distant Supervision: A Neural Expectation-Maximization Framework.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> Uncover the Ground-Truth Relations in Distant Supervision: A Neural Expectation-Maximization Framework.</b>
     <p class='content'>Chen, J., Zhang, R., Mao, Y., Guo, H., & Xu, J.</p>
     <a href="https://doi.org/10.18653/v1/D19-1031">EMNLP 2019</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Learning K-way D-dimensional Discrete Embedding for Hierarchical Data Visualization and Retrieval.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Learning K-way D-dimensional Discrete Embedding for Hierarchical Data Visualization and Retrieval.</b>
     <p class='content'>Liang, X., Min, M., Guo, H., & Wang, G.</p>
     <a href="https://doi.org/10.24963/ijcai.2019/411">IJCAI 2019</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Modeling Noisy Hierarchical Types in Fine-Grained Entity Typing: A Content-Based Weighting Approach.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> Modeling Noisy Hierarchical Types in Fine-Grained Entity Typing: A Content-Based Weighting Approach.</b>
     <p class='content'>Wu, J., Zhang, R., Mao, Y., Guo, H., & Huai, J.</p>
     <a href="https://doi.org/10.24963/ijcai.2019/731">IJCAI 2019</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>A Neural Bag-of-Words Modelling Framework for Link Prediction in Knowledge Bases with Sparse Connectivity.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> A Neural Bag-of-Words Modelling Framework for Link Prediction in Knowledge Bases with Sparse Connectivity.</b>
     <p class='content'>Kong, F., Zhang, R., Guo, H., Mensah, S., Hu, Z., & Mao, Y.</p>
     <a href="https://doi.org/10.1145/3308558.3313550">WWW 2019</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Syntax Encoding with Application in Authorship Attribution.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> Syntax Encoding with Application in Authorship Attribution.</b>
     <p class='content'>Zhang, R., Hu, Z., Guo, H., & Mao, Y.</p>
     <a href="https://doi.org/10.18653/v1/d18-1294">EMNLP 2018</a>
 </li>          
 
-<li style="margin-bottom: 20px;">
-    <b>Parametric t-Distributed Stochastic Exemplar-Centered Embedding.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Parametric t-Distributed Stochastic Exemplar-Centered Embedding.</b>
     <p class='content'>Min, M., Guo, H., & Shen, D.</p>
     <a href="https://doi.org/10.1007/978-3-030-10925-7_29">ECML PKDD 2018</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>A Deep Network with Visual Text Composition Behavior.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> A Deep Network with Visual Text Composition Behavior.</b>
     <p class='content'>Guo, H.</p>
     <a href="https://doi.org/10.18653/v1/P17-2059">ACL 2017</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Exemplar-centered Supervised Shallow Parametric Data Embedding.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Exemplar-centered Supervised Shallow Parametric Data Embedding.</b>
     <p class='content'>Min, M., Guo, H., & Song, D.</p>
     <a href="https://doi.org/10.24963/ijcai.2017/345">IJCAI 2017</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Accelerated Continuous Conditional Random Fields for load forecasting.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Accelerated Continuous Conditional Random Fields for load forecasting.</b>
     <p class='content'>Guo, H.</p>
     <a href="https://doi.org/10.1109/ICDE.2016.7498390">ICDE 2016</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>DAG-Structured Long Short-Term Memory for Semantic Compositionality.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> DAG-Structured Long Short-Term Memory for Semantic Compositionality.</b>
     <p class='content'>Zhu, X., Sobhani, P., & Guo, H.</p>
     <a href="https://doi.org/10.18653/v1/n16-1106">NAACL 2016</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Representation Based Translation Evaluation Metrics.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> Representation Based Translation Evaluation Metrics.</b>
     <p class='content'>Chen, B., & Guo, H.</p>
     <a href="https://doi.org/10.3115/v1/p15-2025">ACL 2015</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Long Short-Term Memory Over Recursive Structures.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Long Short-Term Memory Over Recursive Structures.</b>
     <p class='content'>Zhu, X., Sobhani, P., & Guo, H.</p>
     <a href="http://proceedings.mlr.press/v37/zhub15.html">ICML 2015</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>The Unreasonable Effectiveness of Word Representations for Twitter Named Entity Recognition.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> The Unreasonable Effectiveness of Word Representations for Twitter Named Entity Recognition.</b>
     <p class='content'>Cherry, C., & Guo, H.</p>
     <a href="https://doi.org/10.3115/v1/n15-1075">NAACL 2015</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Generating Text with Deep Reinforcement Learning.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> Generating Text with Deep Reinforcement Learning.</b>
     <p class='content'>Guo, H.</p>
     <a href="http://rll.berkeley.edu/deeprlworkshop/">Deep Reinforcement Learning Workshop @NeurIPS 2015</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Accelerated Continuous Conditional Random Fields For Load Forecasting.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Accelerated Continuous Conditional Random Fields For Load Forecasting.</b>
     <p class='content'>Guo, H.</p>
     <a href="http://dx.doi.org/10.1109/TKDE.2015.2399311">TKDE 2015</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>An Empirical Study on the Effect of Negation Words on Sentiment.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [NLP] </span> An Empirical Study on the Effect of Negation Words on Sentiment.</b>
     <p class='content'>Zhu, X., Guo, H., Mohammad, S., & Kiritchenko, S.</p>
     <a href="https://doi.org/10.3115/v1/p14-1029">ACL 2014</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Modeling Short-Term Energy Load with Continuous Conditional Random Fields.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Modeling Short-Term Energy Load with Continuous Conditional Random Fields.</b>
     <p class='content'>Guo, H.</p>
     <a href="https://doi.org/10.1007/978-3-642-40988-2_28">ECML PKDD 2013</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Multirelational classification: a multiple view approach.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Multirelational classification: a multiple view approach.</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
     <a href="http://dx.doi.org/10.1007/s10115-008-0127-5">KAIS 2008</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Mining relational data through correlation-based multiple view validation.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Mining relational data through correlation-based multiple view validation.</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
     <a href="https://doi.org/10.1145/1150402.1150469">KDD 2007</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Measuring to Fit: Virtual Tailoring Through Cluster Analysis and Classification.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Measuring to Fit: Virtual Tailoring Through Cluster Analysis and Classification.</b>
     <p class='content'>Viktor, H., Paquet, E., & Guo, H.</p>
     <a href="https://doi.org/10.1007/11871637_38">ECML PKDD 2007</a>
 </li>
 
-<li style="margin-bottom: 20px;">
-    <b>Learning from imbalanced data sets with boosting and data generation: the DataBoost-IM approach.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: darkgray;"> [Machine Learning] </span> Learning from imbalanced data sets with boosting and data generation: the DataBoost-IM approach.</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
     <a href="http://dx.doi.org/10.1145/1007730.1007736">KDD Explorations 2004</a>
 </li>           
