--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Hongyu Guo">
 
     
-    <title>Hongyu Guo, National Research Council, University of Ottawa, Canada</title>
+    <title>Hongyu Guo@NRC Canada, University of Ottawa</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
