--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. <
     <a href="https://openreview.net/pdf?id=CjTHVo1dvR">ICLR 2023</a>
 </li>
 
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span>  Over-Training with Mixup May Hurt Generalization.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span>  Over-Training with Mixup May Hurt Generalization.</b>
     <p class='content'>Liu, Z., Wang, Z., Guo, H., & Mao, Y.</p>
     <a href="https://openreview.net/pdf?id=JmkjrlVE-DG">ICLR 2023</a>
 </li>
@@ -205,7 +205,7 @@ Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. <
 </li>    
 
 
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span> Interpolating Graph Pair to Regularize Graph Classification.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span> Interpolating Graph Pair to Regularize Graph Classification.</b>
     <p class='content'>Guo, H., & Mao, Y.</p>
     <a href="https://arxiv.org/pdf/2110.09344.pdf">AAAI 2023</a>
 </li>
@@ -221,12 +221,12 @@ Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. <
 </li>
 
            
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span> f-MICL: Understanding and Generalizing InfoNCE-based Contrastive Learning.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span> f-MICL: Understanding and Generalizing InfoNCE-based Contrastive Learning.</b>
     <p class='content'>Lu, Y., Zhang, G., Sun, S., Guo, H., & Yu, Y.</p>
     <a href="https://openreview.net/pdf?id=ZD03VUZmRx">TMLR 2023</a>
 </li>
 
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span> Information Bottleneck and Aggregated Learning.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span> Information Bottleneck and Aggregated Learning.</b>
     <p class='content'>Soflaei, M., Zhang, R., Guo, H., Al-Bashabsheh, A., & Mao, Y.</p>
     <a href="https://ieeexplore.ieee.org/abstract/document/10249215">TPAMI 2023</a>
 </li>
@@ -246,27 +246,27 @@ Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. <
     <a href="https://arxiv.org/pdf/2106.04113.pdf">ICML 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span> Symmetric Wasserstein Autoencoders.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span> Symmetric Wasserstein Autoencoders.</b>
     <p class='content'>Sun, S., & Guo, H.</p>
     <a href="https://arxiv.org/pdf/2106.13024.pdf">UAI 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span> Class-wise Calibration: A Case Study on COVID-19 Hate Speech.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span> Class-wise Calibration: A Case Study on COVID-19 Hate Speech.</b>
     <p class='content'>Obadinma, S. G. H. Z. X.</p>
     <a href="https://www.caiac.ca/en/conferences/canadianai-2021/home">CAI 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span> Midpoint Regularization: from High Uncertainty Training Labels to Conservative Classification Decisions.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span> Midpoint Regularization: from High Uncertainty Training Labels to Conservative Classification Decisions.</b>
     <p class='content'>Guo, H.</p>
     <a href="https://arxiv.org/pdf/2106.13913.pdf">ECML-PKDD 2021</a>
 </li>
 
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span> Nonlinear Mixup: Out-Of-Manifold Data Augmentation for Text Classification.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span> Nonlinear Mixup: Out-Of-Manifold Data Augmentation for Text Classification.</b>
     <p class='content'>Guo, H.</p>
     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/5822">AAAI 2020</a>
 </li>
 
-<li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [Machine Learning] </span> Aggregated Learning: A Vector-Quantization Approach to Learning Neural Network Classifiers.</b>
+<li style="margin-bottom: 20px;"><b> <span style="color: Gold;"> [Machine Learning] </span> Aggregated Learning: A Vector-Quantization Approach to Learning Neural Network Classifiers.</b>
     <p class='content'>Soflaei, M., Guo, H., Al-Bashabsheh, A., Mao, Y., & Zhang, R.</p>
     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/6038">AAAI 2020</a>
 </li>
