--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 
            
-<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Lu, J., Chen, X., Lu, S., Shi, C., Guo, H., Bengio, Y., Tang, J. </p><a href="https://arxiv.org/pdf/2410.18403">ICLR 2025</a></li>         
+<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Lu, J., Chen, X., Lu, S., Shi, C., Guo, H., Bengio, Y., Tang, J. </p><a href="https://openreview.net/pdf?id=OzUNDnpQyd">ICLR 2025</a></li>         
 <li style="margin-bottom: 20px;"><b> <span style="color: Fuchsia;">[AI for Materials]</span> AssembleFlow: Rigid Flow Matching with Inertial Frames for Molecular Assembly. </b><p class='content'> Guo, H., Bengio, Y., Liu, S. </p><a href="https://openreview.net/pdf?id=jckKNzYYA6">ICLR 2025</a></li>  
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J.,
 Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. </p><a href="https://arxiv.org/pdf/2302.04611"> Nature Machine Intelligence 2025</a></li>
