--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
 <!--  <li style="margin-bottom: 20px;"><b> <span style="color: darkgray;">[Protein Conformation Sampling]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Jiarui Lu, Xiaoyin Chen, Stephen Zhewen Lu, Chence Shi, Hongyu Guo, Yoshua Bengio, Jian Tang. </p><a href="https://arxiv.org/pdf/2410.18403">arXiv 2024</a></li>         -->
 <!--  <li style="margin-bottom: 20px;"><b> <span style="color: Fuchsia;">[AI for Materials]</span> An Equivariant Flow Matching Framework for Learning Molecular Crystallization. </b><p class='content'> Shengchao Liu, Divin Yan, Hongyu Guo, Anima Anandkumar. </p><a href="https://openreview.net/pdf?id=wFs9427Jsy">arXiv 2024</a></li>    -->
 <!--  <li style="margin-bottom: 20px;"><b> <span style="color: darkgray;">[LLM for Biology Pathway]</span> Conversational Large Language Models for Biology Pathway Detection. </b><p class='content'> Yanjing Li, Hannan Xu, Haiteng Zhao, Hongyu Guo, Shengchao Liu. </p><a href="https://openreview.net/pdf?id=AS5AZ5L8zk">arXiv</a></li>  -->
-<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs] </span> A Multi-Grained Symmetric Differential Equation Model for Learning Protein-Ligand Binding Dynamics. </b><p class='content'> Shengchao Liu, Weitao Du, Yanjing Li, Zhuoxinran Li, Vignesh Bhethanabotla, Nakul Rampal, Omar Yaghi, Christian Borgs, Anima Anandkumar, Hongyu Guo, Jennifer Chayes. </p><a href="https://arxiv.org/pdf/2401.15122">arXiv 2023</a></li> 
 
        </ul>
          <h4 id="pub"> Selected Publications <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Full List]</a> </h4>
@@ -172,11 +171,11 @@
          <ul>
 
 
-           
+<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs] </span> A Multi-Grained Symmetric Differential Equation Model for Learning Protein-Ligand Binding Dynamics. </b><p class='content'> Liu. S., Du, W., Xu, H., Li, Y., Li, Z., Bhethanabotla, V., Yan, D., Borgs, C., Anandkumar, A., Guo, H., Chayes, J. </p><a href="https://arxiv.org/pdf/2401.15122"> Nature Communications 2025</a></li>            
+<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J.,           
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs] </span> Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Liu, S., Yan, D., Du, W., Liu, W., Li, Z., Guo, H., Borgs C., Chayes, J., Anandkumar, A. </p><a href="https://arxiv.org/pdf/2409.10584">Proceedings of the National Academy of Sciences (PNAS) 2025</a></li> 
 <li style="margin-bottom: 20px;"><b> <span style="color: Fuchsia;">[AI for Materials]</span> AssembleFlow: Rigid Flow Matching with Inertial Frames for Molecular Assembly. </b><p class='content'> Guo, H., Bengio, Y., Liu, S. </p><a href="https://openreview.net/pdf?id=jckKNzYYA6">ICLR 2025</a></li>  
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Lu, J., Chen, X., Lu, S., Shi, C., Guo, H., Bengio, Y., Tang, J. </p><a href="https://openreview.net/pdf?id=OzUNDnpQyd">ICLR 2025</a></li>         
-<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J.,
 Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. </p><a href="https://www.nature.com/articles/s42256-025-01011-z"> Nature Machine Intelligence 2025</a></li>
 
            
