--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
              <li>  A <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> molecule search  </a> project for  health and climate solutions with Prof. <a href="https://yoshuabengio.org/profile/"> Yoshua Bengio </a> at Mila. </a>  (Also featured in <a href="https://sciencepolicy.ca/posts/collaborative-rd-key-to-addressing-challenges/">Canadian Science Policy Centre (GSPC) Magazine.</a>) </li>
          <li>   A <a href="https://nrc.canada.ca/en/stories/challenge-accepted-how-ai-collaborations-strengthen-discoveries"> molecule graph </a> representation and generation project with Prof. <a href="https://jian-tang.com/"> Jian Tang </a> at Mila.   </li>
          <li>   Three papers on drug discovery recently accepted by high-impact journals: <a href="https://www.nature.com/natmachintell/"> Nature Machine Intelligence</a>, <a href="https://www.nature.com/ncomms/"> Nature Communications</a>, and <a href="https://www.pnas.org/"> PNAS</a>.   </li> 
+          <li> U.S. Patent 12,475,308 B2: <a href="https://patents.google.com/patent/US12475308B2">Vector Space Model for Form Data Extraction.</a> </li>
       </div>
 
       
